[package]
name = "wss-service"
version = "0.1.0"
edition = "2021"

[dependencies]
adjust = "0.1.24"
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["ws"] }
futures-util = "0.3.31"
log = "0.4.26"
serde_json = "1.0.140"

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]
